--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag    'application', media: 'all' %>
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
   <%= javascript_include_tag 'application' %>
+  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
   <%= csrf_meta_tags %>
 <% end %>
 
